apps/immich/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: immich
  annotations:
    argocd.argoproj.io/tracking-id: "immich:/Namespace:immich/immich"
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
